--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.7",
+    "expo-constants": "~14.4.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.1.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
     "react-native-gesture-handler": "~2.12.0",
-    "expo-constants": "~14.4.2"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
